--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>  
 <body>
   <div class="kartu-profil">
-    <img src="foto-profil.jpg" alt="foto profil saya">
+    <img src="DSC02830.jpg" alt="foto profil saya">
     <h1>Kirana Wangsa Putri</h1>
     <p>siswa SMA yang tertarik dengan teknologi dan desain. Selamat datang di website pertama saya!</p>
     <a href="https://www.instagram.com/rllnneaaa">Kunjungi Instagram Saya</a>
